--- a/elm.tex
+++ b/elm.tex
@@ -1,78 +1,78 @@
-\section{M√°quinas Extremas}\label{elmorig}
+\section{M·quinas Extremas}\label{elmorig}
 % von Zuben:
 % ftp://ftp.dca.fee.unicamp.br/pub/docs/vonzuben/ia353_1s13/topico4_P4_1s2013_view.pdf
 % Ele coloca uma coluna adicional de 1s em H.
 % Considerando que a matriz H tenha posto completo
-Uma \ing{\elm}{Extreme Learning Machine} (ELM) √© uma rede, n√£o
+Uma \ing{\elm}{Extreme Learning Machine} (ELM) È uma rede, n„o
 necessariamente neural e com treinamento diferenciado, que tem recebido crescente
-aten√ß√£o devido √† sua simplicidade e performance, compar√°vel com o estado da arte
-em classifica√ß√£o \citep{journals/tsmc/HuangZDZ12}.
-Sua topologia √© a mesma de um \ing{Perceptron multicamadas}{MultiLayer Perceptron} - MLP
+atenÁ„o devido ‡ sua simplicidade e performance, compar·vel com o estado da arte
+em classificaÁ„o \citep{journals/tsmc/HuangZDZ12}.
+Sua topologia È a mesma de um \ing{Perceptron multicamadas}{MultiLayer Perceptron} - MLP
 \citep{haykin2004comprehensive}, mas com a quantidade de camadas ocultas fixada em apenas uma.
-Essa topologia √© chamada de \ing{rede de camada oculta √∫nica com direcionamento entrada-sa√≠da}
+Essa topologia È chamada de \ing{rede de camada oculta ˙nica com direcionamento entrada-saÌda}
 {Single Hidden Layer Feedforward Network}
 (SLFN).
-Com rela√ß√£o √† configura√ß√£o dos neur√¥nios, a ELM √© desprovida do peso de vi√©s na
-camada de sa√≠da e aceita fun√ß√µes de ativa√ß√£o n√£o diferenci√°veis na camada oculta.
-A camada oculta √© gerada com pesos aleat√≥rios e mantida sem altera√ß√µes
+Com relaÁ„o ‡ configuraÁ„o dos neurÙnios, a ELM È desprovida do peso de viÈs na
+camada de saÌda e aceita funÁıes de ativaÁ„o n„o diferenci·veis na camada oculta.
+A camada oculta È gerada com pesos aleatÛrios e mantida sem alteraÁıes
 durante o treinamento.
 Essa ideia remonta ao trabalho de \cite{rosenblatt1961principles} que optou
-por ajustar apenas as √∫ltimas camadas.
-Na ELM, o ajuste tira proveito do fato de que a camada de sa√≠da
-√© um modelo de regress√£o linear.
-Esse tipo de modelo tem sido estudado desde o s√©culo XIX \citep{legendre1805nouvelles},
-logo possui uma vasta literatura de m√©todos que permitem alterar a rede de
-forma otimizada conforme explorado a seguir e nas se√ß√µes
+por ajustar apenas as ˙ltimas camadas.
+Na ELM, o ajuste tira proveito do fato de que a camada de saÌda
+È um modelo de regress„o linear.
+Esse tipo de modelo tem sido estudado desde o sÈculo XIX \citep{legendre1805nouvelles},
+logo possui uma vasta literatura de mÈtodos que permitem alterar a rede de
+forma otimizada conforme explorado a seguir e nas seÁıes
 \ref{press}, \ref{emelm} e \ref{oselm}.
 
 A ELM enquanto conceito existe desde o trabalho de \cite{journals/tnn/HuangB98}
-onde √© proposta a busca direta pelo valor dos pesos de sa√≠da sem a necessidade de itera√ß√µes
-e o uso de qualquer fun√ß√£o de ativa√ß√£o limitada n√£o linear.
-Neste trabalho, dentre os dois tipos de n√≥ mais frequentemente usados,
-aditivo log√≠stico sigmoide e fun√ß√£o de base radial \citep{journals/tsmc/HuangZDZ12},
+onde È proposta a busca direta pelo valor dos pesos de saÌda sem a necessidade de iteraÁıes
+e o uso de qualquer funÁ„o de ativaÁ„o limitada n„o linear.
+Neste trabalho, dentre os dois tipos de nÛ mais frequentemente usados,
+aditivo logÌstico sigmoide e funÁ„o de base radial \citep{journals/tsmc/HuangZDZ12},
 optou-se pelo primeiro.
-Assim, a fun√ß√£o preditiva de uma SLFN com $L$ neur√¥nios ocultos pode ser representada
-como segue na Equa√ß√£o \ref{eqelm}.
+Assim, a funÁ„o preditiva de uma SLFN com $L$ neurÙnios ocultos pode ser representada
+como segue na EquaÁ„o \ref{eqelm}.
 \begin{equation} \label{eqelm}
 f(\bm{x}_{(t)})= \argmax_{\bm{y} \in Y}{\displaystyle\mathop{\sum} _{l=1}^{L}\beta_{l,c(\bm{y})}
 g(\bm{a}_l \bm{x}_{(t)} + b_l)} = \bm{y}_{(t)}
 \end{equation}
 % }, \quad j=1, \cdots, {\it N}.
 
-$\beta_{l,o}$ √© o peso da sinapse que conecta o neur√¥nio oculto $l$ ao neur√¥nio de sa√≠da $o$;
-$c(\bm{z})$ √© uma fun√ß√£o auxiliar que retorna o √≠ndice correspondente √† classe
+$\beta_{l,o}$ È o peso da sinapse que conecta o neurÙnio oculto $l$ ao neurÙnio de saÌda $o$;
+$c(\bm{z})$ È uma funÁ„o auxiliar que retorna o Ìndice correspondente ‡ classe
 representado pelo vetor $\bm{z} \in Y$;
-$g$ √©, neste trabalho, a fun√ß√£o sigmoide log√≠stica;
-$\bm{w}_l$ √© o vetor de pesos do neur√¥nio $l$ com cada valor $w_i$ representando o peso entre a
-entrada $i$ e o neur√¥nio $l$ e, sendo o produto interno deste neur√¥nio uma equa√ß√£o de reta no
-espa√ßo de par√¢metros, $b_l$ √© o valor de seu vi√©s de deslocamento em rela√ß√£o √† origem.
-Mais detalhes da formula√ß√£o da primeira camada podem ser consultados na literatura sobre o
+$g$ È, neste trabalho, a funÁ„o sigmoide logÌstica;
+$\bm{w}_l$ È o vetor de pesos do neurÙnio $l$ com cada valor $w_i$ representando o peso entre a
+entrada $i$ e o neurÙnio $l$ e, sendo o produto interno deste neurÙnio uma equaÁ„o de reta no
+espaÁo de par‚metros, $b_l$ È o valor de seu viÈs de deslocamento em relaÁ„o ‡ origem.
+Mais detalhes da formulaÁ„o da primeira camada podem ser consultados na literatura sobre o
 Perceptron multicamadas convencional \citep{haykin2004comprehensive}.
-Se $\beta$ for adotada como uma matriz, a equa√ß√£o \ref{eqelm} pode ser escrita compactamente da
-forma (Equa√ß√£o \ref{eq2}):
+Se $\beta$ for adotada como uma matriz, a equaÁ„o \ref{eqelm} pode ser escrita compactamente da
+forma (EquaÁ„o \ref{eq2}):
 \begin{equation} \label{eq2}
 H \beta = T
 \end{equation}
 
-onde $H$ √© a \ing{matriz de sa√≠das da camada oculta}{hidden layer output matrix} da SLFN,
-ou seja, cada coluna corresponde √† sa√≠da de um neur√¥nio oculto e cada linha corresponde a um
+onde $H$ È a \ing{matriz de saÌdas da camada oculta}{hidden layer output matrix} da SLFN,
+ou seja, cada coluna corresponde ‡ saÌda de um neurÙnio oculto e cada linha corresponde a um
 exemplo do conjunto de treinamento;
-$\beta$ √© a matriz contendo os pesos que conectam a camada oculta √† camada de sa√≠da, ou seja, cada
-coluna corresponde a um neur√¥nio de sa√≠da e cada linha corresponde a um neur√¥nio oculto;
-e $T$ √© a matriz objetivo, que cont√©m em cada linha a
-representa√ß√£o bin√°ria (um-de-n) $\bm{y}$ da classe de cada exemplo.
-O c√°lculo de $\beta$, que √© an√°logo a treinar a rede,
-pode ser feito por meio do c√°lculo da pseudoinversa $H^{\dagger}$ de $H$
+$\beta$ È a matriz contendo os pesos que conectam a camada oculta ‡ camada de saÌda, ou seja, cada
+coluna corresponde a um neurÙnio de saÌda e cada linha corresponde a um neurÙnio oculto;
+e $T$ È a matriz objetivo, que contÈm em cada linha a
+representaÁ„o bin·ria (um-de-n) $\bm{y}$ da classe de cada exemplo.
+O c·lculo de $\beta$, que È an·logo a treinar a rede,
+pode ser feito por meio do c·lculo da pseudoinversa $H^{\dagger}$ de $H$
 \citep{rao1971generalized}:
 \begin{equation} \label{eq3}
 \beta = H^{\dagger} T
 \end{equation}
-Essa abordagem tem a vantagem de ser tamb√©m uma minimiza√ß√£o da norma dos pesos -
+Essa abordagem tem a vantagem de ser tambÈm uma minimizaÁ„o da norma dos pesos -
 propriedade que reduz a possibilidade de sobreajustamento aos dados de treinamento
 \citep{journals/tit/Bartlett98}.
 Uma vez calculada a pseudoinversa,
-novos exemplos podem alimentar a entrada da rede e gerar predi√ß√µes conforme a fun√ß√£o $f$
-presente na Equa√ß√£o \ref{eqelm}.
+novos exemplos podem alimentar a entrada da rede e gerar prediÁıes conforme a funÁ„o $f$
+presente na EquaÁ„o \ref{eqelm}.
 
 % https://reference.wolfram.com/mathematica/tutorial/LinearAlgebraMatrixComputations.html
 % explica bem a pinv
@@ -85,28 +85,28 @@ presente na Equa√ß√£o \ref{eqelm}.
 % % http://www.mendeley.com/download/public/1683461/5291097694/743b3ac1a6f01b8b9ad380254dc9ee7de2146086/dl.pdf
 % % \citep{prud2011}
 % 
-% Um desses m√©todos, chamado
-% \textit{soma dos quadrados dos erros de predi√ß√£o} - PRESS\footnote{\textit{PREdiction Sum of Squares}}
-% \citep{myers2000classical,allan1974relationship}, permite estimar o erro de generaliza√ß√£o do modelo.
-% Exceto nos casos de instabilidade num√©rica, essa estimativa √© exata e equivalente √† que seria obtida
-% pela valida√ß√£o cruzada via \textit{Leave-One-Out} (LOO), representando uma redu√ß√£o na complexidade
-% computacional em rela√ß√£o √† quantidade de treinamentos de linear para constante - ou
-% de quadr√°tica para linear, se for considerada a quantidade de exemplos.
+% Um desses mÈtodos, chamado
+% \textit{soma dos quadrados dos erros de prediÁ„o} - PRESS\footnote{\textit{PREdiction Sum of Squares}}
+% \citep{myers2000classical,allan1974relationship}, permite estimar o erro de generalizaÁ„o do modelo.
+% Exceto nos casos de instabilidade numÈrica, essa estimativa È exata e equivalente ‡ que seria obtida
+% pela validaÁ„o cruzada via \textit{Leave-One-Out} (LOO), representando uma reduÁ„o na complexidade
+% computacional em relaÁ„o ‡ quantidade de treinamentos de linear para constante - ou
+% de quadr·tica para linear, se for considerada a quantidade de exemplos.
 % 
 % % http://www.jstor.org/stable/2686028?__redirected
-% % o come√ßo fala do PRESS, com formula clarificando(?)
+% % o comeÁo fala do PRESS, com formula clarificando(?)
 % 
 % % (see [15] and [16] for details of this formula and its implementations)
 % % 15:Classical and Modern Regression With Applications,
 % % 16:?Recursive lazy learning for modeling and control,? http://www.researchgate.net/publication/2301623_Recursive_Lazy_Learning_for_Modeling_and_Control/file/79e4151136c53c3067.pdf
 % 
 % .
-% \ano{f√≥rmula hat}
+% \ano{fÛrmula hat}
 % 
 % 
-% % \ano{PRESS: erro estatistico (de regress√£o?)}
+% % \ano{PRESS: erro estatistico (de regress„o?)}
 % % 
-% % \ano{quadrado do res√≠duo: erro I e CI?}
+% % \ano{quadrado do resÌduo: erro I e CI?}
 % % 
 % % diferencia 'statistical error' e 'residual':
 % % 
@@ -120,25 +120,25 @@ presente na Equa√ß√£o \ref{eqelm}.
 % \subsection{EM-ELM} \label{emelm}
 % 
 % crescimento incremental da
-% \ing{\elm por minimiza√ß√£o do erro}{Error Minimized Extreme Learning Machine} -
+% \ing{\elm por minimizaÁ„o do erro}{Error Minimized Extreme Learning Machine} -
 % EM-ELM \citep{journals/tnn/FengHLG09}.
-% Al√©m de permitir o crescimento da rede sem recalcular a pseudoinversa,
-% a EM-ELM permite o c√°lculo da PRESS a um custo reduzido.
+% AlÈm de permitir o crescimento da rede sem recalcular a pseudoinversa,
+% a EM-ELM permite o c·lculo da PRESS a um custo reduzido.
 % 
-% % * EM-ELM serve de base para v√°rias variantes de ELM: AIE-ELM, D-ELM, CEOS-ELM
+% % * EM-ELM serve de base para v·rias variantes de ELM: AIE-ELM, D-ELM, CEOS-ELM
 % % survey simples: http://www.wisdombasedcomputing.com/vol1issue1april2011/paper4.pdf
 % 
-% \tar{colocar f√≥rmula que obt√©m PRESS da EM-ELM}
-% \ano{ver se k √© usado pra alguma outra coisa}
-% Sendo $\bm{h}_{(k)}$ o vetor coluna de valores de fun√ß√£o de ativa√ß√£o correspondente
-% √† coluna $k$ da matriz $H_k$ na itera√ß√£o $k$, ou seja, ap√≥s o acr√©scimo de $k$
-% neur√¥nios,
-% a matriz $H_k$ pode ser representada conforme a Equa√ß√£o \ref{eqh}.
+% \tar{colocar fÛrmula que obtÈm PRESS da EM-ELM}
+% \ano{ver se k È usado pra alguma outra coisa}
+% Sendo $\bm{h}_{(k)}$ o vetor coluna de valores de funÁ„o de ativaÁ„o correspondente
+% ‡ coluna $k$ da matriz $H_k$ na iteraÁ„o $k$, ou seja, apÛs o acrÈscimo de $k$
+% neurÙnios,
+% a matriz $H_k$ pode ser representada conforme a EquaÁ„o \ref{eqh}.
 % \begin{equation}\label{eqh}
 % \mathbf{H}_k = [\mathbf{H}_{k-1}, \bm{h}_k]
 % \end{equation}
-% Assim, cada novo neur√¥nio faz a matriz $H$ aumentar em uma coluna.
-% A atualiza√ß√£o dos pesos $\beta$ se d√° por meio das equa√ß√µes
+% Assim, cada novo neurÙnio faz a matriz $H$ aumentar em uma coluna.
+% A atualizaÁ„o dos pesos $\beta$ se d· por meio das equaÁıes
 % \ref{em1}, \ref{em2} e \ref{em3}.
 % \begin{equation}\label{em1}
 % \mathbf{D}_k=\frac{\bm{h}_k(\mathbf{I}-\mathbf{H}_k\mathbf{H}_k^\dagger)}
@@ -147,8 +147,8 @@ presente na Equa√ß√£o \ref{eqelm}.
 % \begin{equation}\label{em2}
 % \mathbf{U}_k=\mathbf{H}_k^\dagger(\mathbf{I}-\bm{h}_k\mathbf{D}_k)
 % \end{equation}
-% \ano{procurar papel ou c√≥digo que mostre as f√≥rmulas siomplificadas para
-% ficar sem redund√¢ncia}
+% \ano{procurar papel ou cÛdigo que mostre as fÛrmulas siomplificadas para
+% ficar sem redund‚ncia}
 % \begin{equation}\label{em3}
 % \beta_{k+1}=\mathbf{H}_{k+1}^\dagger\mathbf{T}=\left [
 % \begin{matrix}
@@ -165,23 +165,23 @@ presente na Equa√ß√£o \ref{eqelm}.
 % \subsection{OS-ELM}\label{oselm}
 % \ano{OS-ELM vale a pena porque evita uma inversa grande, calcula apenas uma vez e favorece o uso do pequeno cache.}
 % 
-% Em sistemas interativos, frequentemente √© adotado o esquema incremental de aprendizado.
-% O tempo de treinamento √© reduzido quando √© poss√≠vel aproveitar o resultado de c√°lculos
-% pr√©vios durante todo o processo.
+% Em sistemas interativos, frequentemente È adotado o esquema incremental de aprendizado.
+% O tempo de treinamento È reduzido quando È possÌvel aproveitar o resultado de c·lculos
+% prÈvios durante todo o processo.
 % % ROS-ELM A Robust Online Sequential Extreme Learning Machine 2007:
 % % http://download.springer.com/static/pdf/966/chp%253A10.1007%252F978-3-540-72383-7_126.pdf?auth66=1398531288_8f1d69c65bc2dcd81b7a7451031a0dad&ext=.pdf
 % % Na OS-ELM, os biases precisam ser escolhidos dentro de determinados intervalos, dependentes de dataset, para evitar ill-conditioning/singularity of H.
 % % Eles calculam, aparentemente, os biases pela diagonal de XW (X: att values? W: pesos?).
-% No caso da ELM, isso √© poss√≠vel por meio da
+% No caso da ELM, isso È possÌvel por meio da
 % \ing{\elm sequencial}{On-line Sequential Extreme Learning Machine} (OS-ELM)
 % proposta por \cite{conf/iastedCI/HuangLRSS05}.
-% A t√©cnica √© baseada no algoritmo dos m√≠nimos quadrados recursivo
-% que utiliza a f√≥rmula de Sherman-Morrison-Woodbury
+% A tÈcnica È baseada no algoritmo dos mÌnimos quadrados recursivo
+% que utiliza a fÛrmula de Sherman-Morrison-Woodbury
 % % http://books.google.com.br/books?hl=en&lr=&id=iD5s0iKXHP8C&oi=fnd&pg=PT15&dq=+An+introduction+to+optimization&ots=3PqthZAq8d&sig=Befcr8te239chWT6UOVyVrMIkSo#v=snippet&q=recursive%20least&f=false
 % \citep{chong2013introduction}.
-% $H$ passa a ser considerada em fun√ß√£o do tempo - indicado subscrito
+% $H$ passa a ser considerada em funÁ„o do tempo - indicado subscrito
 % para melhor legibilidade: $H_{(t)}$.
-% Para ser poss√≠vel encontrar a solu√ß√£o dos m√≠nimos quadrados de
+% Para ser possÌvel encontrar a soluÁ„o dos mÌnimos quadrados de
 % $H_{(0)} \beta_{(0)} = T_{(0)}$,
 % que se refere ao conjunto inicial de dados rotulados (instante $t=0$),
 % a pseudoinversa esquerda $H^\dagger_{(0)}$ deve ser calculada por:
@@ -193,7 +193,7 @@ presente na Equa√ß√£o \ref{eqelm}.
 % H^{\dagger}_{(0)} = P_{(0)}H^\top_{(0)}
 % \end{equation}
 % 
-% Assim, √© poss√≠vel realizar um treinamento inicial da rede.
+% Assim, È possÌvel realizar um treinamento inicial da rede.
 % Para os lotes de dados subsequentes, ou seja,
 % quando $t>0$, apenas $\beta_{(t)}$ e $P_{(t)}$ precisam ser mantidos, onde:
 % 
@@ -205,28 +205,28 @@ presente na Equa√ß√£o \ref{eqelm}.
 % \beta_{(t)} = \beta_{(t-1)} + P_{(t)} H^{\top}_{(t)} (T_{(t)} - H_{(t)} \beta_{(t-1)})
 % \end{equation}
 % 
-% O c√°lculo incremental de $\beta_{(t)}$ e $P_{(t)}$ evita os custos de se recalcular a
+% O c·lculo incremental de $\beta_{(t)}$ e $P_{(t)}$ evita os custos de se recalcular a
 % pseudoinversa para cada novo lote de dados.
 % 
 
 
 \subsection{I-ELM}\label{ielm}
-Apesar da vantagem do c√°lculo da pseudoinversa ser uma etapa √∫nica no
-aprendizado da ELM, trata-se de um c√°lculo que pode ser custoso.
-Uma alternativa √© a \elm \textit{incremental} (I-ELM) proposta por
+Apesar da vantagem do c·lculo da pseudoinversa ser uma etapa ˙nica no
+aprendizado da ELM, trata-se de um c·lculo que pode ser custoso.
+Uma alternativa È a \elm \textit{incremental} (I-ELM) proposta por
 \cite{journals/tnn/HuangCS06}.
-O aprendizado da I-ELM come√ßa com um neur√¥nio e
-progride com a adi√ß√£o de novos neur√¥nios, um a um.
-O valor do peso √© calculado de forma a reduzir o erro entre o
+O aprendizado da I-ELM comeÁa com um neurÙnio e
+progride com a adiÁ„o de novos neurÙnios, um a um.
+O valor do peso È calculado de forma a reduzir o erro entre o
 valor predito e o valor esperado.
-Cada neur√¥nio adicionado na itera√ß√£o $t$ requer um novo peso $\beta_{1,t}$
-para conect√°-lo ao neur√¥nio de sa√≠da.
+Cada neurÙnio adicionado na iteraÁ„o $t$ requer um novo peso $\beta_{1,t}$
+para conect·-lo ao neurÙnio de saÌda.
 Assumindo, por simplicidade, apenas um atributo preditivo,
 a matriz alvo $T$ se torna um \textit{vetor coluna}, representado aqui por $\bm{\tau}$.
 \ano{ver se ja mencionei h antes, na parte da EM-ELM}
-Sendo $\bm{h}_{(t)}$ o vetor de valores da fun√ß√£o de ativa√ß√£o do novo neur√¥nio,
+Sendo $\bm{h}_{(t)}$ o vetor de valores da funÁ„o de ativaÁ„o do novo neurÙnio,
 ou seja, com os valores da coluna $t$ de $H$,
-o valor do peso √© calculado segundo a Equa√ß√£o \ref{eq:ielm}.
+o valor do peso È calculado segundo a EquaÁ„o \ref{eq:ielm}.
 \begin{equation}\label{eq:ielm0}
 \bm{e}_{(0)} = \bm{\tau}
 \end{equation}
@@ -234,27 +234,27 @@ o valor do peso √© calculado segundo a Equa√ß√£o \ref{eq:ielm}.
 \beta_{1,t}=\frac{\bm{e}_{(t-1)}\cdot \bm{h}_{(t)}}
 {\bm{h}_{(t)}\cdot \bm{h}_{(t)}}
 \end{equation}
-Onde $\bm{e}_{(t)}$ √© o vetor de erros residuais antes da inser√ß√£o do
-novo neur√¥nio na itera√ß√£o $t$.
-Todos os vetores t√™m cada uma de suas componentes associadas a um dos exemplos do conjunto de treinamento.
-A predi√ß√£o da classe de novos exemplos se d√° da mesma forma que na ELM original.
+Onde $\bm{e}_{(t)}$ È o vetor de erros residuais antes da inserÁ„o do
+novo neurÙnio na iteraÁ„o $t$.
+Todos os vetores tÍm cada uma de suas componentes associadas a um dos exemplos do conjunto de treinamento.
+A prediÁ„o da classe de novos exemplos se d· da mesma forma que na ELM original.
 
 \subsection{CI-ELM}
-Uma proposta similar √† I-ELM, chamada \textit{convexa incremental} (CI-ELM),
-opta pelo reajuste de todos os pesos da camada de sa√≠da a cada novo neur√¥nio
+Uma proposta similar ‡ I-ELM, chamada \textit{convexa incremental} (CI-ELM),
+opta pelo reajuste de todos os pesos da camada de saÌda a cada novo neurÙnio
 acrescentado \citep{journals/ijon/HuangC07}.
-Diferentemente da I-ELM, ela √© baseada na otimiza√ß√£o convexa de Barron
-\citep{journals/tit/Barron93}, mas mant√©m a capacidade de redu√ß√£o do erro
-treinamento de forma monot√¥nica at√© qualquer valor arbitrariamente pequeno.
-Ela √© capaz de atingir uma converg√™ncia maior que a I-ELM
-para um mesmo n√∫mero de itera√ß√µes.
-Assim, dada uma meta de erro, a CI-ELM possibilita a indu√ß√£o de redes mais compactas.
+Diferentemente da I-ELM, ela È baseada na otimizaÁ„o convexa de Barron
+\citep{journals/tit/Barron93}, mas mantÈm a capacidade de reduÁ„o do erro
+treinamento de forma monotÙnica atÈ qualquer valor arbitrariamente pequeno.
+Ela È capaz de atingir uma convergÍncia maior que a I-ELM
+para um mesmo n˙mero de iteraÁıes.
+Assim, dada uma meta de erro, a CI-ELM possibilita a induÁ„o de redes mais compactas.
 
-Para cada novo neur√¥nio, seu peso √© calculado de forma an√°loga √† apresentada na
-Se√ß√£o \ref{ielm}, por√©m os valores de sa√≠da do novo neur√¥nio representados por
-$\bm{h}_{(t)}$ s√£o substitu√≠dos pela diferen√ßa $\bm{d}_{(t)}$
-entre o erro corrente e o erro devido ao novo neur√¥nio,
-conforme equa√ß√µes \ref{eq:cielm} e \ref{eq:cielm2}.
+Para cada novo neurÙnio, seu peso È calculado de forma an·loga ‡ apresentada na
+SeÁ„o \ref{ielm}, porÈm os valores de saÌda do novo neurÙnio representados por
+$\bm{h}_{(t)}$ s„o substituÌdos pela diferenÁa $\bm{d}_{(t)}$
+entre o erro corrente e o erro devido ao novo neurÙnio,
+conforme equaÁıes \ref{eq:cielm} e \ref{eq:cielm2}.
 \begin{equation}\label{eq:cielm}
 \bm{d}_{(t)}=\bm{e}_{(t-1)} - (\bm{\tau} - \bm{h}_{(t)})
 \end{equation}
@@ -262,97 +262,97 @@ conforme equa√ß√µes \ref{eq:cielm} e \ref{eq:cielm2}.
 \beta_{1,t}=\frac{\bm{e}_{(t-1)}\cdot \bm{d}_{(t)}}
 {\bm{d}_{(t)}\cdot \bm{d}_{(t)}}
 \end{equation}
-% Onde $T$ √© o vetor alvo, ou seja, cont√©m os valores do atributo preditivo.
-A etapa adicional de reajuste √© feita para todo o conjunto de pesos anteriormente
+% Onde $T$ È o vetor alvo, ou seja, contÈm os valores do atributo preditivo.
+A etapa adicional de reajuste È feita para todo o conjunto de pesos anteriormente
 acrescentados ($\{\beta_i \mid 1 \leq i < t\}$)
-de acordo com a Equa√ß√£o \ref{reajuste}.
+de acordo com a EquaÁ„o \ref{reajuste}.
 \begin{equation}\label{reajuste}
 \beta_{1,i}^* = (1 - \beta_{1,t}) \cdot \beta_{1,i}
 \end{equation}
-Assim como na I-ELM, a CI-ELM realiza as predi√ß√µes por meio da f√≥rmula da Equa√ß√£o \ref{eqelm}.
+Assim como na I-ELM, a CI-ELM realiza as prediÁıes por meio da fÛrmula da EquaÁ„o \ref{eqelm}.
 
 % 
 % \ano{citar as outras ELMs que crescem ou aprendem incrementalmente?}
-% % Al√©m da OS-ELM, outras variantes da ELM t√™m sido propostas:
+% % AlÈm da OS-ELM, outras variantes da ELM tÍm sido propostas:
 % % ROS-ELM, que evita matrizes mal-condicionadas por meio do ajuste dos vieses $b_i$ \cite
 % % {conf/isnn/HoangHVW07};
-% % EI-ELM ou EM-ELM, n√£o-incrementais, que fazem a rede crescer \textit{congelando}
+% % EI-ELM ou EM-ELM, n„o-incrementais, que fazem a rede crescer \textit{congelando}
 % % \citep{huang2008enhanced} ou \textit{atualizando} \citep{journals/tnn/FengHLG09}
-% % n√≥s antigos;
+% % nÛs antigos;
 % % e, CEOS-ELM, que faz a rede crescer durante o aprendizado \textit{on-line} \citep{conf/ijcnn/LanSH09}.
 % %
-% % Para o presente trabalho, a OS-ELM ``can√¥nica'' foi adotada, pois cada variante tem seus pr√≥prias
-% % vicissitudes e o prop√≥sito deste trabalho √© apenas dar uma primeira impress√£o a respeito da
-% % performance da ELM com diferentes estrat√©gias.
-% % Tamb√©m √© importante lembrar que, na presen√ßa de uma matriz $H_{(0)}$ mal-condicionada,
-% % OS-ELM n√£o converge para ELM.
+% % Para o presente trabalho, a OS-ELM ``canÙnica'' foi adotada, pois cada variante tem seus prÛprias
+% % vicissitudes e o propÛsito deste trabalho È apenas dar uma primeira impress„o a respeito da
+% % performance da ELM com diferentes estratÈgias.
+% % TambÈm È importante lembrar que, na presenÁa de uma matriz $H_{(0)}$ mal-condicionada,
+% % OS-ELM n„o converge para ELM.
 % 
 % \tar{Citar von Zuben e outros brasileiros}
 % 
 % 
-% \subsection{Configura√ß√£o adotada para aprendizado ativo}
+% \subsection{ConfiguraÁ„o adotada para aprendizado ativo}
 % \ano{mover isso pra algum lugar melhor na tese}
-% At√© onde o conhecimento do autor permite alcan√ßar,
-% n√£o existe pesquisa em aprendizado ativo que enfoque ELMs.
+% AtÈ onde o conhecimento do autor permite alcanÁar,
+% n„o existe pesquisa em aprendizado ativo que enfoque ELMs.
 % As poucas abordagens encontradas usam aprendizado ativo apenas como uma ferramenta
 % sem maiores desenvolvimentos em torno do assunto em si.
 % 
 % \subsubsection{Aprendizado ativo e \elms}\label{aelmrev}
-% Um exemplo √© a \ing{consulta por amostragens e desvio padr√£o}{standard deviation query-by-bagging}
+% Um exemplo È a \ing{consulta por amostragens e desvio padr„o}{standard deviation query-by-bagging}
 % \cite{conf/his/AyerdiMG12},
-% que √© conceitualmente pr√≥ximo √† \textit{amostragem por incerteza}
-% e \textit{consulta por comit√™}.
-% √â uma abordagem gen√©rica no sentido de que ela pode ser aplicada em
-% um comit√™ de modelos gerados por qualquer algoritmo de aprendizado.
-% Outro exemplo √© o \ing{aprendizado ativo baseado em fixa√ß√£o}{fixation-based active learning},
+% que È conceitualmente prÛximo ‡ \textit{amostragem por incerteza}
+% e \textit{consulta por comitÍ}.
+% … uma abordagem genÈrica no sentido de que ela pode ser aplicada em
+% um comitÍ de modelos gerados por qualquer algoritmo de aprendizado.
+% Outro exemplo È o \ing{aprendizado ativo baseado em fixaÁ„o}{fixation-based active learning},
 % que treina uma ELM para ser usada como uma \ing{tabela de mapeamento de cores}{color look-up table}
-% para segmenta√ß√£o.
-% Na parte de aprendizado ativo, √© calculada a entropia de um histograma feito das intensidades
-% em uma regi√£o circular \cite{journals/soco/PanPLW12} - novamente,
-% o aprendizado ativo √© usado apenas como uma ferramenta independente do classificador adotado.
+% para segmentaÁ„o.
+% Na parte de aprendizado ativo, È calculada a entropia de um histograma feito das intensidades
+% em uma regi„o circular \cite{journals/soco/PanPLW12} - novamente,
+% o aprendizado ativo È usado apenas como uma ferramenta independente do classificador adotado.
 % Outro, menos relacionado exemplo,
-% √© a incerteza de um \ing{arcabou√ßo}{framework} bayesiano n√£o-param√©trico baseado em ELMs
+% È a incerteza de um \ing{arcabouÁo}{framework} bayesiano n„o-paramÈtrico baseado em ELMs
 % \cite{conf/ictai/ChatzisKD11}.
-% √Ä parte desses trabalhos isolados,
-% nenhum estudo foi encontrado na literatura de aprendizado de m√°quina.
-% Consequentemente, estudos comparativos abrangentes est√£o ausentes da literatura.
+% ¿ parte desses trabalhos isolados,
+% nenhum estudo foi encontrado na literatura de aprendizado de m·quina.
+% Consequentemente, estudos comparativos abrangentes est„o ausentes da literatura.
 % 
-% \subsubsection{Adequa√ß√£o da \elm para aprendizado ativo}\label{adeq}
-% O aprendizado ativo √© um caso de aprendizado interativo.
-% Assim, o aprendiz representa um modelo que evolui com o tempo que possa fazer predi√ß√µes
+% \subsubsection{AdequaÁ„o da \elm para aprendizado ativo}\label{adeq}
+% O aprendizado ativo È um caso de aprendizado interativo.
+% Assim, o aprendiz representa um modelo que evolui com o tempo que possa fazer prediÁıes
 % a qualquer momento.
 % Sendo a \elm original uma rede de topologia fixa e treinamento em lote,
 % o modelo resultante pode demorar para ser gerado, dependendo da quantidade de exemplos,
-% de atributos e de classes. Al√©m disso, algum tipo de sele√ß√£o de modelos √© necess√°ria para
+% de atributos e de classes. AlÈm disso, algum tipo de seleÁ„o de modelos È necess·ria para
 % a busca do valor ideal para $L$.
-% O processo de sele√ß√£o de modelos habitualmente envolve o uso de valida√ß√£o cruzada
-% \ano{citar artigo sobre sele√ß√£o de moldelo, ``pra fazer melhor proveito dos dados''}
-% que √© custoso, especialmente se envolver a valida√ß√£o menos enviesada que √© o LOO.
-% \esb{cita√ß√£o}
+% O processo de seleÁ„o de modelos habitualmente envolve o uso de validaÁ„o cruzada
+% \ano{citar artigo sobre seleÁ„o de moldelo, ``pra fazer melhor proveito dos dados''}
+% que È custoso, especialmente se envolver a validaÁ„o menos enviesada que È o LOO.
+% \esb{citaÁ„o}
 % 
-% Dependendo da aplica√ß√£o, o or√°culo √© humano, sujeito ao \textit{tempo m√°ximo toler√°vel de espera}.
+% Dependendo da aplicaÁ„o, o or·culo È humano, sujeito ao \textit{tempo m·ximo toler·vel de espera}.
 % \ano{vou  definir aqui, ou antes?}
-% Dentre as variantes da \elm citadas na se√ß√µes \ref{topologia}, \ref{oselm} e \ref{emelm}
-% a mais conveniente √© a combina√ß√£o OS-ELM, EM-ELM e PRESS,
-% por envolver a formula√ß√£o can√¥nica, ou seja, analiticamente desenvolvida
-% por teoremas j√° consagrados na literatura de √°lgebra linear.
-% % Outra vantagem de se evitar as variantes da Se√ß√£o \ref{topologia} √© a aus√™ncia de par√¢metros? ops!
+% Dentre as variantes da \elm citadas na seÁıes \ref{topologia}, \ref{oselm} e \ref{emelm}
+% a mais conveniente È a combinaÁ„o OS-ELM, EM-ELM e PRESS,
+% por envolver a formulaÁ„o canÙnica, ou seja, analiticamente desenvolvida
+% por teoremas j· consagrados na literatura de ·lgebra linear.
+% % Outra vantagem de se evitar as variantes da SeÁ„o \ref{topologia} È a ausÍncia de par‚metros? ops!
 % % mais citadas e mais representativas sem pirotecnias
 % 
 % Uma abordagem similar foi empregada por \cite{journals/ijon/HeeswijkMOL11},
-% por√©m sem o crescimento acelerado que poderia ser proporcionado pela EM-ELM
+% porÈm sem o crescimento acelerado que poderia ser proporcionado pela EM-ELM
 % e sem a possibilidade de aprendizado incremental.
-% Eles recalculam a pseudoinversa a cada novo neur√¥nio acrescentado at√© encontrar a topologia com
+% Eles recalculam a pseudoinversa a cada novo neurÙnio acrescentado atÈ encontrar a topologia com
 % a menor PRESS.
-% % Eles implementaram uma ELM espec√≠fica para \ing{unidades de processamento gr√°fico}
+% % Eles implementaram uma ELM especÌfica para \ing{unidades de processamento gr·fico}
 % % {Graphics Processing Unit} (GPU).
-% % No presente trabalho, exceto para SGmulti, os conjuntos de treinamento n√£o passam de $200$ exemplos,
-% % n√£o justificando o uso de GPU, especialmente em vista do custo de transfer√™ncia de dados.
+% % No presente trabalho, exceto para SGmulti, os conjuntos de treinamento n„o passam de $200$ exemplos,
+% % n„o justificando o uso de GPU, especialmente em vista do custo de transferÍncia de dados.
 % 
 % 
 % \ano{expor o algoritmo}
 % 
 % \ano{crescer de 1 em 1, mas para acelerar conforme a necessidade incrementar de 1 em 1 exemplo e crescer
 % de q em q}
-% \esb{testa a faixa de  de L-10 at√© L+10 neur√¥nios;}
-% come√ßando com L=1
+% \esb{testa a faixa de  de L-10 atÈ L+10 neurÙnios;}
+% comeÁando com L=1
