--- a/imagens/macros-pgf.tex
+++ b/imagens/macros-pgf.tex
@@ -1,5 +1,5 @@
+\usepackage[latin1]{inputenc}
 \usepackage{pgfplots,bm}
-
 \usetikzlibrary{plotmarks}
 \usetikzlibrary{scopes,shapes,shadows,calc,arrows,shapes.symbols,automata,decorations.pathmorphing,backgrounds,fit,positioning}
 
@@ -179,7 +179,7 @@
 				\node (c#1) [b, right of=f#1, label=-90:$\textit{version space}$] {
   \begin{tabular}{ll}
     $\bf{x}$ que melhor define \\
-    hipÃ³teses vÃ¡lidas
+    hipóteses válidas
   \end{tabular}
 };
 				\draw[->,setatr] (a#1) -- node (1,1)[] {} (f#1);
