--- a/tese.tex
+++ b/tese.tex
@@ -1,5 +1,4 @@
 \documentclass[12pt,twoside]{book}
-
 \usepackage{scrextend}
 % \usepackage{cite}
 % \usepackage[pdftex]{graphicx}
@@ -26,7 +25,7 @@
 
 \newcommand{\meutitulo}{Aprendizado ativo ... }
 \newcommand{\meunome}{Davi Pereira dos Santos}
-\newcommand{\meuorientador}{Prof. Dr. AndrÃ© Carlos Ponce de Leon Ferreira de Carvalho}
+\newcommand{\meuorientador}{Prof. Dr. André Carlos Ponce de Leon Ferreira de Carvalho}
 \newcommand{\minhadata}{Dezembro/2014}
 \newcommand{\minhabolsa}{Trabalho realizado com o apoio da CAPES.}
 \newcommand{\meugrau}{Doutor}
@@ -43,18 +42,18 @@
 \usepackage{subfigure}
 %%\usepackage{epigraph}
 %%\usepackage{endnotes}
-%\renewcommand{\notesname}{ComentÃ¡rios}
+%\renewcommand{\notesname}{Comentários}
 \usepackage{natbib}
 \usepackage{latexsym}
 \usepackage{setspace}
 \usepackage{xspace}
 % \usepackage[nohyperlinks]
-%%% referencias com pÃ¡gina \vref
+%%% referencias com página \vref
 \usepackage[brazil]{varioref}
 \usepackage{indentfirst}
 %%% figuras um ao lado do outro
 \usepackage{subfigure}
-%%% definir tÃ­tulos de seÃ§Ã£o
+%%% definir títulos de seção
 \usepackage[sf,sl,outermarks]{titlesec}
 \titleformat{\section}{\color{black}\normalfont\Large\bfseries}{\color{darkgray}\thesection}{1em}{}
 \titleformat{\subsection}{\color{black}\normalfont\bfseries}{\color{darkgray}\thesubsection}{1em}{}
@@ -69,7 +68,7 @@
   \geometry{a4paper,left=3cm,right=2cm,top=2.0cm,bottom=2cm,twoside}
 
 %%% cria links no arquivo .pdf
-%%% comentar as linhas na versÃ£o para impressao
+%%% comentar as linhas na versão para impressao
 \usepackage[pdftex,pdfpagelabels,pagebackref,pageanchor=false]{hyperref}
 
 % % Para imprimir PDFs com offset
@@ -96,7 +95,7 @@
 % \usepackage[adobe-utopia]{mathdesign} %pacote texlive-fonts-extra no ubuntu
 \usepackage{ae}
 % \usepackage{bookman}
-
+\usepackage[T1]{fontenc}
 \usepackage{amsfonts}
 \DeclareFixedFont{\numberfont}{T1}{phv}{bx}{n}{2cm}
 \titleformat{\chapter}[display]
@@ -137,13 +136,13 @@
     \dp0=0in\ht0=0in\box0}}
 
 \include{macros}
-% \usepackage{parallel} % para as equaÃ§Ãµes de medidas multilabel
+% \usepackage{parallel} % para as equações de medidas multilabel
 
 %%%%%%%%%%%%%%%% FORMATACAO DE PALAVRAS %%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\nf }[1] % nome de ferramenta
     {\textsc{#1}}
-\newcommand{\pe }[1] % termo em inglÃªs
+\newcommand{\pe }[1] % termo em inglês
     {\textit{#1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -198,11 +197,6 @@
 \usepackage{afterpage}
 \usepackage{capt-of}
 
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{lmodern}
-\usepackage[brazil]{babel}
-
 \begin{document}
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \pagestyle{empty}
@@ -210,15 +204,14 @@
 \newcommand{\titulo}{\meutitulo}
 \newcommand{\autor}{\meunome}
 \newcommand{\orientador}{\meuorientador}
-\newcommand{\nota}{Tese apresentada ao Instituto de CiÃªncias MatemÃ¡ticas e de ComputaÃ§Ã£o - ICMC-USP, para o Exame de QualificaÃ§Ã£o, como parte dos requisitos necessÃ¡rios Ã  obtenÃ§Ã£o do tÃ­tulo de \meugrau\xspace em CiÃªncias de ComputaÃ§Ã£o e MatemÃ¡tica Computacional.}
-%\newcommand{\nota}{Monografia apresentada Ã  disciplina de Metodologia de Pesquisa CientÃ­fica em InteligÃªncia Artificial, no Instituto de CiÃªncias MatemÃ¡ticas e de ComputaÃ§Ã£o - ICMC-USP, como parte dos requisitos necessÃ¡rios Ã  obtenÃ§Ã£o dos crÃ©ditos relacionados Ã  disciplina.}
+\newcommand{\nota}{Tese apresentada ao Instituto de Ciências Matemáticas e de Computação - ICMC-USP, para o Exame de Qualificação, como parte dos requisitos necessários à obtenção do título de \meugrau\xspace em Ciências de Computação e Matemática Computacional.}
+%\newcommand{\nota}{Monografia apresentada à disciplina de Metodologia de Pesquisa Científica em Inteligência Artificial, no Instituto de Ciências Matemáticas e de Computação - ICMC-USP, como parte dos requisitos necessários à obtenção dos créditos relacionados à disciplina.}
 
 \newcommand{\data}{\minhadata}
 \newcommand{\comentario}{\minhabolsa}
 \input{capa}
 \pagestyle{plain}
 \onehalfspacing
-
 \input{resumo}
 \cleardoublepage
 
@@ -236,9 +229,9 @@
 \chapter*{Abreviaturas}
 \addcontentsline{toc}{section}{Abreviaturas} %ver comando do rigolin para criar links e outras
 \begin{acronym}
-\acro{$ID$}{densidade de informaÃ§Ã£o}
+\acro{$ID$}{densidade de informação}
 % $TU$ utilidade de treinamento
-% $d(\bm{x},\bm{u})$ medida de distÃ¢ncia
+% $d(\bm{x},\bm{u})$ medida de distância
 % $sim(\bm{x},\bm{u})$ medida de similaridade
 \end{acronym}
 \cleardoublepage
@@ -270,5 +263,5 @@
 \bibliographystyle{apalike-br}
 % \bibliographystyle{abnt-alf}
 \bibliography{bibliografia}
-\addcontentsline{toc}{chapter}{ReferÃªncias BibliogrÃ¡ficas}
+\addcontentsline{toc}{chapter}{Referências Bibliográficas}
 \end{document}
